GNOME Bugzilla – Bug 685589
Off-stage touch events are not delivered
Last modified: 2012-10-10 18:40:06 UTC
When a mouse drag continues outside of the stage, motion and button press events are still delivered to listening actors. The same doesn't currently happen with touch events. The patch attached adds the same behaviour to touch events. For the sake of completeness, a similar patch was contained in Tomeu Vizoso's original wip/touch-events branch [1], but disappeared when the branch was merged [2] and I was unable to find why. [1] https://mail.gnome.org/archives/commits-list/2012-June/msg00746.html [2] http://git.gnome.org/browse/clutter/commit/?id=0ec01a2e42645b
Created attachment 225904 [details] [review] events: Deliver touch events that continue off stage (soft grab) If a button press happen on stage and the pointer is moved outside the stage while holding the mouse button, the motion and release events are still delivered to actors. Do the same X11 soft grab emulation for touch events.
Review of attachment 225904 [details] [review]: I wonder how this interacts with system gestures on the compositor. on the other hand, it's consistent with pointer events, so it should be okay. please, push to master - we can test it a bit, before cherry-picking to clutter-1.12.
Attachment 225904 [details] pushed as 318d0d5 - events: Deliver touch events that continue off stage (soft grab)